# zp

./: .gitignore
cs01-k2g/: AGENTS.md  docker-compose.yml  readme.md
cs01-k2g/py_agg_client/: main.py  pyproject.toml
cs01-k2g/py_agg_visualizer/: index.html  main.py  pyproject.toml
cs01-k2g/python/: README.md  configure_grafana_datasource.py  consumer.py  message_pb2.py  perf_bench.py  producer.py  producer_postgres.py  pyproject.toml  transformer.py  transformer_json.py  transformer_postgres.py
cs01-k2g/rs_agg_service/: Cargo.toml  build.rs  readme.md
cs01-k2g/rs_agg_service/src/: cleanup_task.rs  common.rs  fetch_endpoint.rs  kafka_subscriber.rs  main.rs  simulator.rs  updates_endpoint.rs
cs01-k2g/rs_membuf_service/: Cargo.toml  build.rs
cs01-k2g/rs_membuf_service/proto/: message.proto
cs01-k2g/rs_membuf_service/src/: lib.rs  main.rs
cs01-k2g/rs_membuf_service/tests/: api_tests.rs  cleanup_tests.rs
