[project]
name = "python"
version = "0.1.0"
description = "Python clients and utils"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.12.1",
    "fire>=0.7.1",
    "httpx>=0.28.1",
    "orjson>=3.11.4",
    "protobuf>=6.33.0",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
  "ty>=0.0.1a23",
]

