[package]
name = "rs_agg_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
rdkafka = { version = "0.30", features = ["cmake-build"] }
prost = "0.14"
prost-derive = "0.14"
prost-build = "0.14"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
futures = "0.3"

[build-dependencies]
prost-build = "0.14"