[package]
name = "rs_membuf_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rdkafka = { version = "0.31", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.12"
prost-derive = "0.12"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
lazy_static = "1.4"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"
tower = "0.5"